--- a/html/style.css
+++ b/html/style.css
@@ -1,13 +1,115 @@
 body {
   font-family: 'Noto Serif', 'Noto Serif Devanagari', serif;
-  max-width: 1200px;
-  margin: auto;
-  padding: 1em;
-  line-height: 1.5;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f9;
+  color: #333;
 }
 
 :lang(mr) { 
   font-family: 'Noto Serif Devanagari', serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #2c3e50;
+  margin-top: 1em;
+}
+
+h1 {
+  font-size: 2.5em;
+  text-align: center;
+  margin-bottom: 0.5em;
+}
+
+h2 {
+  font-size: 2em;
+  border-bottom: 2px solid #2c3e50;
+  padding-bottom: 0.3em;
+}
+
+h3 {
+  font-size: 1.75em;
+}
+
+h4 {
+  font-size: 1.5em;
+}
+
+h5 {
+  font-size: 1.25em;
+}
+
+h6 {
+  font-size: 1em;
+}
+
+p {
+  margin: 0.5em 0;
+}
+
+ul, ol {
+  margin: 1em 0;
+  padding-left: 1.5em;
+}
+
+li {
+  margin-bottom: 0.5em;
+}
+
+a {
+  color: #3498db;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 2em 0;
+}
+
+.header {
+  background-color: #2c3e50;
+  color: white;
+  padding: 1em 0;
+  text-align: center;
+}
+
+.footer {
+  background-color: #2c3e50;
+  color: white;
+  padding: 1em 0;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+.card {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 1em 0;
+  padding: 1em;
+}
+
+.card img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.card h3 {
+  margin-top: 0;
+}
+
+.card p {
+  margin: 0.5em 0;
 }
 
 h1, h2, h3 {
@@ -87,5 +189,8 @@ img {
 @media (max-width: 768px) {
     .bird-entry {
         flex-direction: column;
+    }
+    .container {
+        width: 95%;
     }
 }
